# mkhelper

./: .cmake-format.py  .fprettify.rc  .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac  depgen.config.in  deplist.config.in  mkhelper.mk.in  pyproject.toml  set_flags
.github/workflows/: ci.yml
bundled/cmake_based/: .gitignore  CMakeLists.txt  mo_cmake_based.f90
bundled/cmake_based/cmake/: Config.cmake.in
bundled/config_subdir/: .gitignore
bundled/delayed/: .gitignore  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  mo_delayed.F90  mo_delayed.f90
bundled/picky/: .gitignore  configure  configure.ac
bundled/threaded_hello/: .gitignore  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  print_hello.c  threaded_hello.c  threaded_hello.h  threaded_hello_f.f90
bundled/threaded_hello/config/: ltmain.sh
bundled/threaded_hello/m4/: libtool.m4
dummy_subdir/: .gitignore  Makefile.in  configure  configure.ac
fpp-wrappers/: cray.sh  nag.sh
fs_hashmap/: destroy.sh  get.sh  init.sh  insert.sh
libtool_patches/: libtool.m4.arg_spaces.patch  libtool.m4.debian_no_overlink.patch  libtool.m4.mpi_wrappers.patch  libtool.m4.nag_convenience.patch  libtool.m4.nag_wrapper.patch  ltmain.sh.nag_pthread.patch  ltmain.sh.no_flag_duplication.patch
m4/: aclocal_fc.m4  acx_arg.m4  acx_build_environment.m4  acx_c_ldbl_gt_dbl.m4  acx_check_progs.m4  acx_claw.m4  acx_compiler.m4  acx_compiler_cross.m4  acx_compiler_simple.m4  acx_compiler_vendor.m4  acx_compiler_version.m4  acx_config_subdir.m4  acx_cuda.m4  acx_fc_c_compatible.m4  acx_fc_c_mpi_compatible.m4  acx_fc_check_module_paths.m4  acx_fc_cuda_compatible.m4  acx_fc_endianness.m4  acx_fc_include.m4  acx_fc_include_order.m4  acx_fc_line_length.m4  acx_fc_mangling.m4  acx_fc_mismatch.m4  acx_fc_mod_file_naming.m4  acx_fc_mod_flags.m4  acx_fc_mod_in_flag.m4  acx_fc_mod_out_flag.m4  acx_fc_module.m4  acx_fc_module_file_naming.m4  acx_fc_module_inc_flag.m4  acx_fc_module_out_flag.m4  acx_fc_mpi_check.m4  acx_fc_pp.m4  acx_fc_pp_comments.m4  acx_fc_pp_define.m4  acx_fc_pp_include.m4  acx_fc_pp_include_order.m4  acx_fc_vendor.m4  acx_fortran.m4  acx_hip.m4  (+21 more)
m4_alternatives/: acx_compiler.m4
mkhelper/: dep_collector  dep_collector.py  dep_generator  dep_generator.py  depgen.py  deplist.py  fortdep  fortmodcmp.py
mkhelper/depgen/: __init__.py  fortran.py  fortran_parser.py  gen_fortran.py  gen_pp.py  include_reader.py  line_control.py  pp.py  pp_c.py  pp_dummy.py  preprocessor.py
mkhelper/fortdep/: collector  common.py  generator  parser.py  preprocessor.py
src/: mo_mod_a.f90
src/include/: include_fc.inc  include_pp.inc
src/invalid/: mo_cycle_1_1.f90  mo_cycle_1_2.f90  mo_cycle_1_3.f90  mo_cycle_2_1.f90  mo_cycle_2_2.f90  mo_invalid.f90  mo_invalid_duplicate.f90
src/modules/: mo_mod_a.f90  mo_mod_b.f90  mo_test_module_nature.f90  mo_test_submodule.f90  mo_test_submodule_indirect.f90  submo_submo_test_submodule.f90  submo_test_submodule.f90
src/modules/openmp/: mo_omp.f90  mo_omp40.f90  mo_omp45.f90
src/program/: implicit_external.f90  main.f90
src/submodules/: smo_smo_test_submodule.f90  smo_test_submodule.f90  smo_test_submodule2.f90
test_inputs/: block_comments.f90  cycle-with-hints.d  cycle.mk  fort_continuation.f90  leaves.mk  pp_continuation.f90  pp_ifelse.f90  semicolons.f90
